create sub directory rediection workflow

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,14 +10,17 @@ on:
     branches: [ "develop" ]
 
 jobs:
-  build:
+  test-microservices:
+    build:
+      runs-on: ubuntu-latest
+      defaults:
+        run:
+          working-directory: ./micro1
 
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+      strategy:
+        matrix:
+          node-version: [16.x]
+          # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v3
