--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,11 +10,55 @@ on:
     branches: [ "develop" ]
 
 jobs:
-  test-microservices:
+  microservices1:
       runs-on: ubuntu-latest
       defaults:
         run:
           working-directory: ./micro1
+
+      strategy:
+        matrix:
+          node-version: [16.x]
+          # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
+      steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          #cache: 'npm'
+      - run: npm ci
+      - run: npm run build --if-present
+      #- run: npm test
+      
+  microservices2:
+      runs-on: ubuntu-latest
+      defaults:
+        run:
+          working-directory: ./micro2
+
+      strategy:
+        matrix:
+          node-version: [16.x]
+          # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
+      steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          #cache: 'npm'
+      - run: npm ci
+      - run: npm run build --if-present
+      #- run: npm test
+      
+  microservices3:
+      runs-on: ubuntu-latest
+      defaults:
+        run:
+          working-directory: ./micro4
 
       strategy:
         matrix:
