--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -44,21 +44,25 @@ jobs:
           # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
       steps:
-      - uses: actions/checkout@v3
+      - name: CHECK-OUT GIT REPOSITORY
+        uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           #cache: 'npm'
-      - run: npm ci
-      - run: npm run build --if-present
+      - name: INSTALL DEPENDENCIES
+        run: npm ci
+      - name: BUILDING APP
+        run: npm run build --if-present
+      #- name: TESTINT APP
       #- run: npm test
       
   microservices3:
       runs-on: ubuntu-latest
       defaults:
         run:
-          working-directory: ./micro4
+          working-directory: ./micro3
 
       strategy:
         matrix:
