--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,7 +10,8 @@ on:
     branches: [ "develop" ]
 
 jobs:
-  microservices1:
+  test-microservices:
+    build:
       runs-on: ubuntu-latest
       defaults:
         run:
@@ -21,61 +22,13 @@ jobs:
           node-version: [16.x]
           # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
-      steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-          #cache: 'npm'
-      - run: npm ci
-      - run: npm run build --if-present
-      #- run: npm test
-      
-  microservices2:
-      runs-on: ubuntu-latest
-      defaults:
-        run:
-          working-directory: ./micro2
-
-      strategy:
-        matrix:
-          node-version: [16.x]
-          # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
-      steps:
-      - name: CHECK-OUT GIT REPOSITORY
-        uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-          #cache: 'npm'
-      - name: INSTALL DEPENDENCIES
-        run: npm ci
-      - name: BUILDING APP
-        run: npm run build --if-present
-      #- name: TESTINT APP
-      #- run: npm test
-      
-  microservices3:
-      runs-on: ubuntu-latest
-      defaults:
-        run:
-          working-directory: ./micro3
-
-      strategy:
-        matrix:
-          node-version: [16.x]
-          # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
-      steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-          #cache: 'npm'
-      - run: npm ci
-      - run: npm run build --if-present
-      #- run: npm test
+    steps:
+    - uses: actions/checkout@v3
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        #cache: 'npm'
+    - run: npm ci
+    - run: npm run build --if-present
+    #- run: npm test
