--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,6 +31,7 @@ jobs:
         run: npm ci
       - name: BUILDING APP
         run: npm run build --if-present
+        run: npm build
       #- name: TESTINT APP
       #- run: npm test
 
