--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,8 +30,7 @@ jobs:
       - name: INSTALL DEPENDENCIES
         run: npm ci
       - name: BUILDING APP
-        run: npm run build --if-present
-        run: npm build
+        run: npm run build
       #- name: TESTINT APP
       #- run: npm test
 
