--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -69,8 +69,8 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: build container
-        run: docker-compose up -d --build
+      # - name: build container
+      #   run: docker-compose up -d --build
       
   CrudMovieService:
       runs-on: ubuntu-latest
@@ -106,8 +106,8 @@ jobs:
           dockerfile: Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: build container
-        run: docker-compose up -d --build
+      # - name: build container
+      #   run: docker-compose up -d --build
 
   EmailService:
       runs-on: ubuntu-latest
@@ -143,8 +143,8 @@ jobs:
           dockerfile: Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: build container
-        run: docker-compose up -d --build
+      # - name: build container
+      #   run: docker-compose up -d --build
 
   ReviewService:
       runs-on: ubuntu-latest
@@ -180,8 +180,8 @@ jobs:
           dockerfile: Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: build container
-        run: docker-compose up -d --build
+      # - name: build container
+      #   run: docker-compose up -d --build
 
   SearchService:
       runs-on: ubuntu-latest
@@ -217,5 +217,5 @@ jobs:
           dockerfile: Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: build container
-        run: docker-compose up -d --build
+      # - name: build container
+      #   run: docker-compose up -d --build
