--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -59,7 +59,7 @@ jobs:
         run: npm run build --if-present
       #- name: TESTINT APP
       #- run: npm test
-      - run: pwd
+      - run: pwd && ls
       - name: Build & push Docker image
         uses: mr-smithers-excellent/docker-build-push@v5
         with:
