--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -61,9 +61,8 @@ jobs:
       #- run: npm test
       - name: GIT SWITCH REPO
         uses: actions/checkout@v3
-      - name: SWITCH AuthService workdir
-        run:
-          working-directory: ./microservices/AuthService
+      #- name: SWITCH AuthService workdir
+        #run: working-directory: ./microservices/AuthService
       - name: Build & push Docker image
         uses: mr-smithers-excellent/docker-build-push@v5
         with:
