--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -65,7 +65,8 @@ jobs:
           image: sodiki/aos_movie_auth_service
           tags: latest
           registry: docker.io
-          dockerfile: Dockerfile
+          # dockerfile: Dockerfile
+          run: docker build ./microservices/AuthService --file Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
