--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -66,7 +66,7 @@ jobs:
           tags: latest
           registry: docker.io
           # dockerfile: Dockerfile
-          run: docker build ./AuthService/Dockerfile
+          run: docker build .
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
