--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -65,8 +65,10 @@ jobs:
           image: sodiki/aos_movie_auth_service
           tags: latest
           registry: docker.io
-          # dockerfile: Dockerfile
-          run: docker build .
+          dockerfile: Dockerfile
+          run: |
+            ls 
+            pwd 
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
