--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -65,10 +65,8 @@ jobs:
           image: sodiki/aos_movie_auth_service
           tags: latest
           registry: docker.io
+          run: pwd && ls
           dockerfile: Dockerfile
-          run: |
-            ls 
-            pwd 
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
