--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -62,14 +62,7 @@ jobs:
       - name: Build & push Docker image
         uses: mr-smithers-excellent/docker-build-push@v5
         with:
-          image: sodiki/aos_movie_auth_service
-          tags: latest
-          registry: docker.io
-          run: pwd && ls
-          dockerfile: Dockerfile
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
+          run: pwd
       # - name: build container
       #   run: docker-compose up -d --build
       
