--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -69,7 +69,7 @@ jobs:
           image: sodiki/aos_movie_auth_service
           tags: latest
           registry: docker.io
-          dockerfile: Dockerfile
+          dockerfile: /home/runner/work/microservice_cicd/microservice_cicd/microservices/AuthService/Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
