update node yml file

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -60,12 +60,12 @@ jobs:
       #- name: TESTINT APP
       #- run: npm test
       - name: Build & push Docker image
-        run: cd  /home/runner/work/microservice_cicd/microservice_cicd/microservices/AuthService
         uses: mr-smithers-excellent/docker-build-push@v5
         with:
           image: sodiki/aos_movie_auth_service
           tags: latest
           registry: docker.io
+          directory: /home/runner/work/microservice_cicd/microservice_cicd/microservices/AuthService
           dockerfile: Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
