--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -66,7 +66,7 @@ jobs:
           tags: latest
           registry: docker.io
           directory: /home/runner/work/microservice_cicd/microservice_cicd/microservices/AuthService/
-          dockerfile: Dockerfile
+          dockerfile: ./Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
