--- a/microservices/AuthService/Dockerfile
+++ b/microservices/AuthService/Dockerfile
@@ -1,8 +1,10 @@
 FROM node:latest
 RUN mkdir -p /src/app
-COPY package.json /src/app/package.json
 WORKDIR /src/app
+# COPY package.json /src/app/package.json
+COPY --link /foo /src/app
 RUN npm install
-COPY . /src/app
+# COPY . /src/app
+COPY --link /foo /src/app
 EXPOSE 3003
 CMD [ "npm", "start" ]
