--- a/microservices/AuthService/Dockerfile
+++ b/microservices/AuthService/Dockerfile
@@ -1,10 +1,8 @@
 FROM node:latest
 RUN mkdir -p /src/app
 WORKDIR /src/app
-# COPY package.json /src/app/package.json
-COPY --link /foo /src/app
+COPY package.json /src/app/package.json
 RUN npm install
-# COPY . /src/app
-COPY --link /foo /src/app
+COPY . /src/app
 EXPOSE 3003
 CMD [ "npm", "start" ]
