--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,9 +36,9 @@ jobs:
 
   AuthService:
       runs-on: ubuntu-latest
-      # defaults:
-      #   run:
-      #     working-directory: ./microservices/AuthService
+      defaults:
+        run:
+          working-directory: ./microservices/AuthService
 
       strategy:
         matrix:
@@ -62,6 +62,7 @@ jobs:
       - name: Build & push Docker image
         uses: mr-smithers-excellent/docker-build-push@v5
         with:
+          context: .
           image: sodiki/aos_movie_auth_service
           tags: latest
           registry: docker.io
