--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -60,9 +60,9 @@ jobs:
       #- name: TESTINT APP
       #- run: npm test
       - name: Build & push Docker image
-        uses: docker/build-push-action@v3
+        uses: mr-smithers-excellent/docker-build-push@v5
         with:
-          context: ./microservices/AuthService
+          directory: ./microservices/AuthService
           image: sodiki/aos_movie_auth_service
           tags: latest
           registry: docker.io
@@ -101,6 +101,7 @@ jobs:
       - name: Build & push Docker image
         uses: mr-smithers-excellent/docker-build-push@v5
         with:
+          
           image: sodiki/aos_movie_crud_service
           tags: latest
           registry: docker.io
