--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -62,11 +62,11 @@ jobs:
       - name: Build & push Docker image
         uses: mr-smithers-excellent/docker-build-push@v5
         with:
-          directory: ./microservices/AuthService
-          image: sodiki/aos_movie_auth_service
+          # directory: /microservices/AuthService
+          image: sodiki/aos_movie_auth_service      
           tags: latest
           registry: docker.io
-          dockerfile: Dockerfile
+          dockerfile: microservices/AuthService/Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
