--- a/microservices/AuthService/Dockerfile
+++ b/microservices/AuthService/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:latest
 RUN mkdir -p /src/app
-WORKDIR /src/app
-COPY . /src/app
+WORKDIR /src/app/
+COPY . /src/app/
 RUN npm install
 COPY . /src/app
 EXPOSE 3003
