--- a/microservices/AuthService/Dockerfile
+++ b/microservices/AuthService/Dockerfile
@@ -1,8 +1,7 @@
 FROM node:latest
 RUN mkdir -p /src/app
 WORKDIR /src/app
-COPY ./package.json /src/app/package.json
-RUN npm install
+COPY ./package.json ./
 COPY . /src/app
 EXPOSE 3003
 CMD [ "npm", "start" ]
