--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -59,12 +59,6 @@ jobs:
         run: npm run build --if-present
       #- name: TESTINT APP
       #- run: npm test
-      - name: Temporarily save webpack artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: webpack-artifact
-          path: build
-          retention-days: 1
 
       - name: Build & push Docker image
         uses: mr-smithers-excellent/docker-build-push@v5
@@ -112,7 +106,7 @@ jobs:
           image: sodiki/aos_movie_crud_service
           tags: latest
           registry: docker.io
-          dockerfile: Dockerfile
+          dockerfile: microservices/CrudMovieService/Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       # - name: build container
@@ -149,7 +143,7 @@ jobs:
           image: sodiki/aos_movie_email_service
           tags: latest
           registry: docker.io
-          dockerfile: Dockerfile
+          dockerfile: microservices/EmailService/Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       # - name: build container
@@ -186,7 +180,7 @@ jobs:
           image: sodiki/aos_movie_review_service
           tags: latest
           registry: docker.io
-          dockerfile: Dockerfile
+          dockerfile: microservices/ReviewService/Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       # - name: build container
@@ -223,7 +217,7 @@ jobs:
           image: sodiki/aos_movie_search_service
           tags: latest
           registry: docker.io
-          dockerfile: Dockerfile
+          dockerfile: microservices/SearchService/Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       # - name: build container
