--- a/microservices/AuthService/Dockerfile
+++ b/microservices/AuthService/Dockerfile
@@ -1,9 +1,7 @@
 FROM node:latest
 RUN mkdir -p /src/app
 WORKDIR /src/app
-RUN ls
-RUN cd /src/app
-COPY ./package.json ./
-COPY . /src/app
+COPY microservices/AuthService . 
+# COPY . /src/app
 EXPOSE 3003
 CMD [ "npm", "start" ]
