--- a/microservices/AuthService/Dockerfile
+++ b/microservices/AuthService/Dockerfile
@@ -2,15 +2,6 @@ FROM node:latest
 RUN mkdir -p /src/app
 WORKDIR /src/app
 COPY microservices/AuthService .
-# COPY . /src/app
+RUN npm install
 EXPOSE 3003
 CMD [ "npm", "start" ]
-
-
-# FROM node:latest
-# RUN mkdir -p /src/app
-# WORKDIR /src/app
-# COPY microservices/AuthService .
-# # COPY . /src/app
-# EXPOSE 3003
-# CMD [ "npm", "start" ]
