--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -66,7 +66,7 @@ jobs:
           image: sodiki/aos_movie_auth_service      
           tags: latest
           registry: docker.io
-          dockerfile: microservices/AuthService/Dockerfile
+          dockerfile: Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
@@ -105,7 +105,7 @@ jobs:
           image: sodiki/aos_movie_crud_service
           tags: latest
           registry: docker.io
-          dockerfile: microservices/CrudMovieService/Dockerfile
+          dockerfile: Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       # - name: build container
@@ -142,7 +142,7 @@ jobs:
           image: sodiki/aos_movie_email_service
           tags: latest
           registry: docker.io
-          dockerfile: microservices/EmailService/Dockerfile
+          dockerfile: Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       # - name: build container
@@ -179,7 +179,7 @@ jobs:
           image: sodiki/aos_movie_review_service
           tags: latest
           registry: docker.io
-          dockerfile: microservices/ReviewService/Dockerfile
+          dockerfile: Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       # - name: build container
@@ -216,7 +216,7 @@ jobs:
           image: sodiki/aos_movie_search_service
           tags: latest
           registry: docker.io
-          dockerfile: microservices/SearchService/Dockerfile
+          dockerfile: Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       # - name: build container
