--- a/microservices/CrudMovieService/Dockerfile
+++ b/microservices/CrudMovieService/Dockerfile
@@ -1,8 +1,7 @@
 FROM node:latest
 RUN mkdir -p /src/app
 WORKDIR /src/app
-COPY package.json /src/app/package.json
+COPY microservices/CrudMovieService .
 RUN npm install
-COPY . /src/app
 EXPOSE 3000
 CMD [ "npm", "start" ]
