--- a/microservices/ReviewService/Dockerfile
+++ b/microservices/ReviewService/Dockerfile
@@ -1,8 +1,7 @@
 FROM node:latest
 RUN mkdir -p /src/app
 WORKDIR /src/app
-COPY package.json /src/app/package.json
+COPY microservices/ReviewService .
 RUN npm install
-COPY . /src/app
 EXPOSE 3001
 CMD [ "npm", "start" ]
