--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -105,7 +105,7 @@ jobs:
           image: sodiki/aos_movie_crud_service
           tags: latest
           registry: docker.io
-          dockerfile: Dockerfile
+          dockerfile: microservices/CrudMovieService/Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       # - name: build container
