--- a/microservices/CrudMovieService/Dockerfile
+++ b/microservices/CrudMovieService/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:latest
 RUN mkdir -p /src/app
 WORKDIR /src/app
-COPY . .
+COPY . /src/app
 RUN npm install
 EXPOSE 3000
 CMD [ "npm", "start" ]
